--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/andrew-cui/cis197-finalproject#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-session": "^1.3.3",
     "express": "^4.17.1",
+    "mongoose": "^5.7.11",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   }
