--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-session": "^1.3.3",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "fuse.js": "^3.4.6",
     "mongoose": "^5.7.11",
     "path": "^0.12.7",
     "react": "^16.11.0",
